clear some code quality issues